--- a/scss/style.scss
+++ b/scss/style.scss
@@ -66,6 +66,9 @@ body {
           -webkit-transform:rotate(90deg);
           transform:rotate(90deg);
       }
+      i{
+         font-size: 20px;
+      }
 
 	}
 }
