--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ body {
     body .navbar .nav {
       margin-left: 20px;
       margin-top: 30px; }
+      @media only screen and (max-width: 768px) {
+        body .navbar .nav {
+          margin: 30px 20px 0px 20px;
+          text-align: center; } }
       body .navbar .nav .nav-link {
         color: white;
         font-size: 20px;
@@ -44,14 +48,18 @@ body {
     body .main {
       max-width: 100%; }
       body .main .nav {
-        border: 3px solid white; }
+        border: 3px solid white;
+        background-color: black; }
         body .main .nav .nav-item {
           float: left;
           margin-top: 0px;
-          border: 3px solid white;
+          border: 2px solid white;
           width: 50%; }
           body .main .nav .nav-item .nav-link .arrow {
             display: none; } }
+  @media only screen and (max-width: 768px) {
+    body .logo {
+      display: none; } }
   body .container {
     width: 100%; }
     @media only screen and (min-width: 768px) {
