--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,8 +13,13 @@ body {
 		}
 
 		.nav {
+         @media only screen and (max-width: 768px) {
+            margin: 30px 20px 0px 20px;
+            text-align: center;
+         }
 			margin-left: 20px;
 			margin-top: 30px;
+
 
 			.nav-link {
 				color: white;
@@ -80,11 +85,12 @@ body {
 
 			.nav {
 				border: 3px solid white;
+            background-color: black;
 
 				.nav-item {
 					float: left;
 					margin-top: 0px;
-					border: 3px solid white;
+					border: 2px solid white;
 					width: 50%;
 
 					.nav-link {
@@ -94,6 +100,11 @@ body {
 					}
 				}
 			}
+		}
+	}
+	.logo{
+		@media only screen and (max-width: 768px) {
+			display: none;
 		}
 	}
 
