--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,12 @@ body {
 	color: white;
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
+
 	.navbar {
+		@media only screen and (max-width: 768px) {
+			width: 100%;
+			background-color: black;
+		}
 		max-width: 200px;
 
 		&.right {
@@ -110,6 +115,9 @@ body {
 
 	.container {
 		width: 100%;
+		@media only screen and (max-width: 768px) {
+			margin-top: 35%;
+		}
 
 		video {
 			@media only screen and (min-width: 768px) {
