--- a/css/style.css
+++ b/css/style.css
@@ -66,12 +66,12 @@ body {
       display: none; } }
   body .container {
     width: 100%; }
-    @media only screen and (max-width: 768px) {
-      body .container {
-        margin-top: 35%; } }
     @media only screen and (min-width: 768px) {
       body .container video {
         margin-top: -92px; } }
+    @media only screen and (max-width: 768px) {
+      body .container video {
+        margin-top: 35%; } }
     body .container h3 {
       color: #FFF;
       font-family: Helvetica;
@@ -117,6 +117,38 @@ body {
         font-size: 20px; }
         body .container .rules .number:hover {
           text-decoration: unset; }
+    body .container .insights-titles {
+      color: #E0E0E0;
+      font-size: 25px;
+      font-weight: 300;
+      line-height: 25px; }
+      @media only screen and (max-width: 768px) {
+        body .container .insights-titles {
+          margin: 100px 5px 0px 5px; } }
+      @media only screen and (min-width: 768px) {
+        body .container .insights-titles {
+          max-width: 80%;
+          margin-left: 10%;
+          margin-top: 100px; } }
+      body .container .insights-titles ul .nav-link {
+        color: white; }
+        @media only screen and (max-width: 768px) {
+          body .container .insights-titles ul .nav-link {
+            border: 2px solid white; } }
+        body .container .insights-titles ul .nav-link:hover {
+          color: white;
+          text-decoration: underline;
+          background: black;
+          cursor: pointer; }
+      @media only screen and (min-width: 768px) {
+        body .container .insights-titles li {
+          opacity: 1.0; }
+        body .container .insights-titles li:hover {
+          opacity: 0.5; }
+        body .container .insights-titles .parent:hover > li {
+          opacity: 0.5; }
+        body .container .insights-titles .parent:hover > li:hover {
+          opacity: 1.0; } }
     body .container .rotate {
       -moz-transition: all .2s linear;
       -webkit-transition: all .2s linear;
