--- a/scss/style.scss
+++ b/scss/style.scss
@@ -115,14 +115,15 @@ body {
 
 	.container {
 		width: 100%;
-		@media only screen and (max-width: 768px) {
-			margin-top: 35%;
-		}
+
 
 		video {
 			@media only screen and (min-width: 768px) {
 
 				margin-top: -92px;
+			}
+			@media only screen and (max-width: 768px) {
+				margin-top: 35%;
 			}
 		}
 
@@ -132,11 +133,11 @@ body {
 			font-size: 20px;
 			line-height: 32px;
 		}
-
 		.text {
 			margin: 200px auto 0px;
 			max-width: 530px;
 		}
+
 
 		.rules {
 			color: #FFF;
@@ -197,6 +198,52 @@ body {
 					text-decoration: unset;
 				}
 			}
+		}
+		.insights-titles{
+			@media only screen and (max-width: 768px) {
+				margin: 100px 5px 0px 5px;
+			}
+			@media only screen and (min-width: 768px) {
+				max-width: 80%;
+				margin-left: 10%;
+				margin-top: 100px;
+			}
+
+			  color: #E0E0E0;
+			  font-size: 25px;
+			  font-weight: 300;
+			  line-height: 25px;
+			  ul{
+				 .nav-link {
+					color: white;
+					@media only screen and (max-width: 768px) {
+		  				border: 2px solid white;
+		  			}
+
+
+					  &:hover {
+						  color: white;
+						  text-decoration: underline;
+						  background: black;
+						  cursor: pointer;
+					  }
+				  }
+			  }
+			  @media only screen and (min-width: 768px) {
+
+				  li {
+					   opacity: 1.0;
+				   }
+				   li:hover {
+					   opacity: 0.5;
+				   }
+				  .parent:hover > li {
+					  opacity: 0.5;
+				   }
+				   .parent:hover > li:hover {
+					  opacity: 1.0;
+				   }
+			  }
 		}
 
 		.rotate {
