--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,55 @@
 body {
 	background-color: black;
+	color: white;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+	.navbar {
+		max-width: 200px;
+
+		.nav {
+			margin-left: 20px;
+			margin-top: 30px;
+
+			a {
+				color: white;
+
+				&:hover {
+					text-decoration: underline;
+					background-color: unset;
+				}
+
+				&:focus {
+					text-decoration: underline;
+					background-color: unset;
+				}
+
+
+			}
+
+			.active {
+				font-weight: bolder;
+			}
+		}
+	}
+
+	video {
+		margin-top: 85px;
+
+	}
 
 	.container {
-		h1 {
-			font-size: 100px;
+		h3 {
+			color: #FFF;
+			font-family: Helvetica;
+			font-size: 20px;
+			line-height: 32px;
+
+		}
+
+		.text {
+			text-align: center;
+			margin: auto;
+			max-width: 530px;
 		}
 	}
 }
