--- a/scss/style.scss
+++ b/scss/style.scss
@@ -93,20 +93,31 @@ body {
 				display: none;
 				list-style: none;
 
-				a {
-					color: white;
+				li {
+					padding: 0 27px;
 
-					&:hover {
+					a {
 						color: white;
-						text-decoration: underline;
-						background: black;
-						cursor: pointer;
+						font-size: 20px;
+
+						&:hover {
+							color: white;
+							text-decoration: underline;
+							background: black;
+							cursor: pointer;
+						}
 					}
 				}
 			}
 
 			.number {
 				opacity: 0.3;
+				padding-right: 7px;
+				font-size: 20px;
+
+				&:hover {
+					text-decoration: unset;
+				}
 			}
 		}
 
