--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,11 @@ body {
         font-size: 14px;
         font-weight: 300;
         line-height: 14px; }
+  body .breadcrumbs {
+    color: white; }
+    @media only screen and (max-width: 768px) {
+      body .breadcrumbs {
+        margin-top: 100px; } }
   @media only screen and (max-width: 768px) {
     body .main {
       max-width: 100%; }
