--- a/scss/style.scss
+++ b/scss/style.scss
@@ -83,6 +83,15 @@ body {
 			}
 		}
 	}
+	.breadcrumbs{
+		color: white;
+		@media only screen and (max-width:768px) {
+			margin-top: 100px;
+			h6{
+
+			}
+		}
+	}
 
 	.main {
 		@media only screen and (max-width: 768px) {
