--- a/css/insightsSlider.css
+++ b/css/insightsSlider.css
@@ -8,7 +8,7 @@
   grid-column: 1 / -1; }
 
 .insights-content {
-  overflow-y: scroll;
+  overflow: hidden;
   position: -webkit-sticky;
   /* Safari */
   position: sticky;
@@ -29,7 +29,8 @@
     scroll-snap-type: x proximity;
     padding-bottom: calc(.75 * var(--gutter));
     margin-bottom: calc(-.25 * var(--gutter));
-    scroll-padding-left: 100px; }
+    scroll-padding-left: 100px;
+    margin-bottom: -36px; }
     .insights-content .hs .item {
       scroll-snap-align: center;
       display: flex;
