--- a/css/insights.css
+++ b/css/insights.css
@@ -101,7 +101,7 @@ body {
     scroll-snap-type: x proximity;
     padding-bottom: calc(.75 * var(--gutter));
     margin-bottom: calc(-.25 * var(--gutter));
-    scroll-padding-left: 100px; }
+    scroll-padding-left: 500px; }
     .insights-content .hs .item {
       scroll-snap-align: center;
       padding: calc(var(--gutter) / 2 * 1.5);
@@ -109,5 +109,8 @@ body {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background: #fff;
       height: 300px; }
+      .insights-content .hs .item .absolute {
+        position: absolute;
+        top: 0;
+        border: 3px solid #73AD21; }
